overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,6 +70,7 @@ body {
   margin: 0;
   font-size: 0.875em;
   font-family: var(--ff-main);
+  overflow-x: hidden;
 }
 
 a {
